--- a/GigHub/GigHub/Web.config
+++ b/GigHub/GigHub/Web.config
@@ -9,7 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-GigHub-20200307055811.mdf;Initial Catalog=aspnet-GigHub-20200307055811;Integrated Security=True"
+    <add name="DefaultConnection"
+         connectionString="Data Source=.;Initial Catalog=GigHubDB;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
