Saving Data Into DB

--- a/GigHub/GigHub/GigHub.csproj
+++ b/GigHub/GigHub/GigHub.csproj
@@ -186,6 +186,10 @@
     <Compile Include="Migrations\202004051139464_PopulatGenresTable.Designer.cs">
       <DependentUpon>202004051139464_PopulatGenresTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202004061245498_SetGenreId_ArtistIdRequired.cs" />
+    <Compile Include="Migrations\202004061245498_SetGenreId_ArtistIdRequired.Designer.cs">
+      <DependentUpon>202004061245498_SetGenreId_ArtistIdRequired.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -274,6 +278,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202004051139464_PopulatGenresTable.resx">
       <DependentUpon>202004051139464_PopulatGenresTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202004061245498_SetGenreId_ArtistIdRequired.resx">
+      <DependentUpon>202004061245498_SetGenreId_ArtistIdRequired.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
