Notification Featrue Finish Update&Cancel

--- a/GigHub/GigHub/GigHub.csproj
+++ b/GigHub/GigHub/GigHub.csproj
@@ -229,6 +229,10 @@
     <Compile Include="Migrations\202004112248071_AddIsCanceledPropToGig.Designer.cs">
       <DependentUpon>202004112248071_AddIsCanceledPropToGig.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202004131523383_AddNotificationTbls.cs" />
+    <Compile Include="Migrations\202004131523383_AddNotificationTbls.Designer.cs">
+      <DependentUpon>202004131523383_AddNotificationTbls.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -348,6 +352,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202004112248071_AddIsCanceledPropToGig.resx">
       <DependentUpon>202004112248071_AddIsCanceledPropToGig.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202004131523383_AddNotificationTbls.resx">
+      <DependentUpon>202004131523383_AddNotificationTbls.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
